// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostItMiddle Component should match snapshot when fileChanged = false 1`] = `
<div
  className="i_p_main p_main"
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": 296,
    }
  }
>
  <div
    className="i_p_ta"
    style={
      Object {
        "flexShrink": 0,
      }
    }
  >
    <textarea
      className="t_p_ta"
      onChange={[Function]}
      placeholder="What's new with you, @vsocial?"
      spellCheck="false"
      value=""
    />
  </div>
  <form
    className="post_img_form"
    encType="multipart/formdata"
    method="post"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
  >
    <input
      accept="image/*,video/*"
      id="file_input"
      onChange={[Function]}
      type="file"
      value=""
    />
    <label
      className="pri_btn"
      htmlFor="file_input"
    >
      Choose an image or video
    </label>
  </form>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexShrink": 0,
        "justifyContent": "flex-start",
        "padding": "10px",
      }
    }
  >
    <input
      id="isNSFW"
      onChange={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "marginRight": "8px",
        }
      }
      type="checkbox"
    />
    <label
      htmlFor="isNSFW"
      style={
        Object {
          "color": "#e74c3c",
          "cursor": "pointer",
          "fontSize": "13px",
          "fontWeight": "bold",
        }
      }
    >
      Mark as NSFW (Sensitive Content)
    </label>
  </div>
</div>
`;

exports[`PostItMiddle Component should match snapshot when fileChanged = false 2`] = `
<div
  className="i_p_main p_main"
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": 296,
    }
  }
>
  <div
    className="i_p_ta"
    style={
      Object {
        "flexShrink": 0,
      }
    }
  >
    <textarea
      className="t_p_ta"
      onChange={[Function]}
      placeholder="What's new with you, @vsocial?"
      spellCheck="false"
      value=""
    />
  </div>
  <div
    className="i_p_img"
    style={
      Object {
        "flexGrow": 1,
        "overflow": "hidden",
      }
    }
  >
    <img
      className="filter-normal"
      src="/images/location.jpg"
      style={
        Object {
          "height": "100%",
          "objectFit": "cover",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexShrink": 0,
        "justifyContent": "flex-start",
        "padding": "10px",
      }
    }
  >
    <input
      id="isNSFW"
      onChange={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "marginRight": "8px",
        }
      }
      type="checkbox"
    />
    <label
      htmlFor="isNSFW"
      style={
        Object {
          "color": "#e74c3c",
          "cursor": "pointer",
          "fontSize": "13px",
          "fontWeight": "bold",
        }
      }
    >
      Mark as NSFW (Sensitive Content)
    </label>
  </div>
</div>
`;
